# 3DMeshConverter

./: CMakeLists.txt  CmakeLists.txt  README.md  asd.stl
src/: CMakeLists.txt  exception.cpp  exception.hpp  main.cpp  utility.cpp  utility.hpp
src/converter/: converter.hpp  filetype.hpp
src/converter/reader/: ireader.cpp  ireader.hpp  obj_reader.hpp
src/geometry/: CMakeLists.txt  meshdata.cpp  meshdata.hpp  triangle.cpp  triangle.hpp  vector3d.cpp  vector3d.hpp  vertexdata.hpp
src/reader/: CMakeLists.txt  ireader.cpp  ireader.hpp  obj_reader.cpp  obj_reader.hpp  reader_factory.cpp  reader_factory.hpp  supported_input_formats.cpp  supported_input_formats.hpp
src/writer/: CMakeLists.txt  iwriter.cpp  iwriter.hpp  stl_writer.cpp  stl_writer.hpp  supported_output_formats.cpp  supported_output_formats.hpp  writer_factory.cpp  writer_factory.hpp
tests/: CMakeLists.txt  unittest_meshdata.cpp  unittest_obj_reader.cpp  unittest_reader_factory.cpp  unittest_stl_writer.cpp  unittest_supported_input_formats.cpp  unittest_supported_output_formats.cpp  unittest_triangle.cpp  unittest_utility.cpp  unittest_writer_factory.cpp
